--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "electron-reload": "*"
   },
   "dependencies": {
-    "express": "^4.16.2",
     "electron": "*",
+    "express": "^4.16.2",
+    "fs-extra": "^4.0.2",
     "jquery": "^3.2.1",
     "moment": "^2.19.2",
     "request": "^2.83.0"
