--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "fs-extra": "^4.0.2",
     "jquery": "^3.2.1",
     "moment": "^2.19.2",
-    "request": "^2.83.0"
+    "promise": "^8.0.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
