--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "moment-timezone": "^0.5.14"
   },
   "dependencies": {
+    "@google-cloud/speech": "^1.0.0",
     "electron": "^1.8.1",
     "express": "^4.16.2",
     "fs-extra": "^4.0.3",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.8",
+    "node-wit": "^4.3.0",
     "promise": "^8.0.1",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "snowboy": "^1.2.0"
   }
 }
