--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Marvin Mirror application",
   "main": "main.js",
   "scripts": {
-    "start": "./node_modules/.bin/electron ."
+    "start": "./node_modules/.bin/electron .",
+    "compile:sass": "node-sass --watch sass/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
@@ -25,17 +26,19 @@
   "devDependencies": {
     "devtron": "*",
     "electron-reload": "*",
-    "moment-timezone": "^0.5.14"
+    "moment-timezone": "^0.5.14",
+    "node-sass": "^4.7.2"
   },
   "dependencies": {
-    "@google-cloud/speech": "^1.0.0",
+    "cron": "^1.3.0",
     "electron": "^1.8.1",
     "express": "^4.16.2",
     "fs-extra": "^4.0.3",
+    "fullcalendar": "^3.8.0",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.8",
-    "node-wit": "^4.3.0",
+    "node-record-lpcm16": "^0.3.0",
     "promise": "^8.0.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
