--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "cron": "^1.3.0",
+    "@google-cloud/speech": "^1.0.0",
     "electron": "^1.8.1",
     "express": "^4.16.2",
     "fs-extra": "^4.0.3",
