--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@google-cloud/speech": "^1.0.0",
     "cron": "^1.3.0",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "fs-extra": "^4.0.3",
     "fullcalendar": "^3.8.0",
