--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "devtron": "*",
-    "electron": "1.7.5",
     "electron-reload": "^1.2.2",
     "eslint": "^4.17.0",
     "moment-timezone": "^0.5.14",
@@ -35,18 +34,23 @@
     "@google-cloud/speech": "^1.0.0",
     "cron": "^1.3.0",
     "dotenv": "^5.0.0",
+    "electron": "^1.8.3",
     "express": "^4.16.2",
     "fs-extra": "^4.0.3",
     "fullcalendar": "^3.8.0",
+    "google-gax": "^0.15.0",
     "grpc": "^1.8.4",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.8",
+    "node-raspistill": "0.0.14",
     "node-record-lpcm16": "^0.3.0",
     "node-wit": "^4.3.0",
+    "nodejs": "0.0.0",
     "promise": "^8.0.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "shelljs": "^0.8.1",
     "snowboy": "^1.2.0"
   }
 }
