--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^4.0.3",
     "fullcalendar": "^3.8.0",
     "grpc": "^1.8.4",
+    "jimp": "^0.2.28",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.8",
