--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "promise": "^8.0.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "snowboy": "^1.2.0",
-    "watermarkjs": "^2.0.0"
+    "snowboy": "^1.2.0"
   }
 }
